[package]
name = "tiled"
version = "0.12.0"
description = "A rust crate for loading maps created by the Tiled editor"
categories = ["game-development"]
keywords = ["gamedev", "tiled", "tmx", "map"]
repository = "https://github.com/mapeditor/rs-tiled"
readme = "README.md"
license = "MIT"
authors = ["Matthew Hall <matthew@quickbeam.me.uk>"]
edition = "2018"
include = ["src/**/*.rs", "README.md", "LICENSE", "CHANGELOG.md"]

[lib]
name = "tiled"
path = "src/lib.rs"

[[example]]
name = "example"
path = "examples/main.rs"

[[example]]
name = "sfml"
path = "examples/sfml/main.rs"

[[example]]
name = "ggez"
path = "examples/ggez/main.rs"

[dependencies]
base64 = "0.22.1"
flate2 = "1.0.28"
tokio = { version = "1.38.0"}
quick-xml = { version = "0.36.0", features = ["async-tokio"] }
itertools = "0.13.0"
futures = "0.3.30"

[dev-dependencies.sfml]
version = "0.21.0"
features = ["graphics"]

[dev-dependencies.ggez]
version = "0.9.3"
